--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     .bgimg-3,
     .bgimg-4 {
       position: relative;
-      opacity: 0.75;
+      opacity: 0.8;
       background-attachment: scroll;
       background-position: center;
       background-repeat: no-repeat;
@@ -355,27 +355,26 @@
       <p>We will be moving to Berlin on April 1st and are looking for a place long-term we can call home.</p>
     </div>
     <div class="de">
-      <h3>We are Denisa & Fabian and we're looking for a new home in Berlin!</h3>
-      <p>Denisa is a doctor, currently working in Baden-Württemberg.
-        She will soon start a new job at the <a href="https://www.drk-kliniken-berlin.de/koepenick" target="_blank">
-          DRK Kliniken Köpenick.
-        </a></p>
-      <p>Fabian is a Senior Software Engineer. He currently works for a consulting firm and gets to enjoy
-        working on different contracting positions for companies in Berlin. Currently he is part of the mobile
-        development team at <a href="https://www.immobilienscout24.de/" target="_blank">ImmoScout24!</a></p>
-      <p>Originally, we come from the colorful and sunny city of Tirana, Albania.</p>
-      <p>We are both EU Blue card holders and Denisa will be eligible for a permanent residency in March
-        2022.</p>
-      <p>We have known each other since high-school and we currently live together in Reutlingen, Germany.
-        We have both visited Berlin many times before and it is our favorite place in the world.</p>
-      <p>We will be moving to Berlin on April 1st and are looking for a place long-term we can call home.</p>
+      <h3>Wir sind Denisa & Fabian und suchen ein neues Zuhause in Berlin!</h3>
+      <p>Denisa ist Ärztin von Beruf und arbeitet derzeit in Baden-Württemberg.
+        Sie wird bald eine neue Stelle bei den <a href="https://www.drk-kliniken-berlin.de/koepenick" target="_blank">
+          DRK Kliniken Köpenick</a> antreten.</p>
+      <p>Fabian ist Senior Software Engineer. Derzeit arbeitet er für eine Software-Consulting Firma und genießt die
+        Arbeit in verschiedenen Contracting-Positionen für Unternehmen in Berlin. Aktuell ist er Teil des Mobile
+        Development Teams bei <a href="https://www.immobilienscout24.de/" target="_blank">ImmoScout24!</a></p>
+      <p>Ursprünglich kommen wir aus der bunten und sonnigen Stadt Tirana, Albanien.</p>
+      <p>Wir besitzen beide eine Blaue Karte EU. Denisa hat sogar ab März 2022 Anspruch auf eine unbefristete
+        Niederlassungserlaubnis.</p>
+      <p>Wir kennen uns seit dem Gymnasium und leben derzeit zusammen in Reutlingen, Deutschland. Wir haben beide schon
+        oft Berlin besucht und es ist unser Lieblingsort auf der Welt.</p>
+      <p>Wir ziehen zum 01.04.2022 nach Berlin und suchen langfristig eine Wohnung, die wir Zuhause nennen können.</p>
     </div>
   </div>
 
   <div class="bgimg-2">
     <div class="socialGallery">
       <img class="slider-img" src="cooking.jpg" alt="cooking"></img>
-      <img class="slider-img" src="fabianukulele.jpg" alt="ukulele"></img>
+      <img class="slider-img" src="fabianukulele.png" alt="ukulele"></img>
       <img class="slider-img" src="cafe.jpg" alt="cafe"></img>
     </div>
   </div>
@@ -394,16 +393,16 @@
         coming out of it are not always worth listenening to.</p>
     </div>
     <div class="de">
-      <p>We are a young couple who enjoy all the things we do together. We love cooking and travelling the world
-        together.
-        We also enjoy just sitting in the couch after a long day at work and enjoying a movie while having some
-        popcorn.
-      </p>
-      <p>Denisa's favourite activity is sleeping by the seaside. Her superpower is completely ignoring
-        the blazing sun of Spain in the middle of August while having a peaceful nap.</p>
-      <p>Fabian has always tried to be a musician since he was a teenager. He loves playing the ukulele, even though the
-        tunes
-        coming out of it are not always worth listenening to.</p>
+      <p>Wir sind ein junges Pärchen und verbringen gerne Zeit miteinander. Wir lieben es gemeinsam zu kochen und die
+        Welt zu
+        bereisen. Wir genießen es auch, nach einem langen Arbeitstag einfach nur auf der Couch zu sitzen, einen guten
+        Film sehen
+        mit salzigem Popcorn dazu.</p>
+      <p>Denisa's "Lieblingsaktivität" ist Schlafen am Strand. Ihre Superkraft ist es, Mitte August die pralle spanische
+        Sonne
+        komplett ignorieren zu können, während sie ein friedliches Nickerchen macht.</p>
+      <p>Fabian hat sich schon als kleiner Junge als Musiker versucht. Er spielt gerne Ukulele, auch wenn seine Melodien
+        nicht immer wunderschön sind.</p>
     </div>
   </div>
 
@@ -416,7 +415,7 @@
 
     <div class="caption">
       <span class="border en">We contribute to Germany's social welfare system and digitalization</span>
-      <span class="border de">We contribute to Germany's social welfare system and digitalization</span>
+      <span class="border de">Unsere Leistung ist wichtig für das Sozialsystem und für die Digitalisierung</span>
     </div>
   </div>
 
@@ -438,21 +437,15 @@
       </p>
     </div>
     <div class="de">
-      <p>
-        Denisa is an essential worker. She moved to work as a doctor in Germany just before the pandemic started and
-        has been
-        in the front lines ever since. She has dealt with numerous COVID outbreaks at her hospital.
-      </p>
-      <p>
-        Fabian has worked for three different German companies in his career. Through his work he has worked on
-        various
-        products which have contributed in the digitalization and simplification of beauracracy, helping studens find
-        short term
-        jobs and helping people in their apartment search. He actively contributes to the creation of a sustainable
-        and
-        secure
-        digital infrastructure in Germany.
-      </p>
+      <p>Denisa arbeitet in einem systemrelevanten Beruf. Sie zog kurz vor Beginn der Pandemie nach Deutschland und
+        arbeitet
+        seitdem als Ärztin an der Frontlinie. Sie hat in ihrer Klinik zahlreiche COVID-Ausbrüche behandelt.</p>
+      <p>Fabian hat in seiner Karriere für drei verschiedene deutsche Unternehmen gearbeitet. Durch seine Arbeit hat er
+        an
+        verschiedenen Produkten gearbeitet, die zur Digitalisierung und Vereinfachung der Bürokratie beigetragen haben,
+        Studenten dabei geholfen haben, kurzfristige Jobs zu finden und Menschen die Wohnungssuche erleichtert. Er trägt
+        aktiv
+        zur Schaffung einer nachhaltigen und sicheren digitalen Infrastruktur in Deutschland bei.</p>
     </div>
   </div>
 
@@ -471,7 +464,7 @@
           from Kreuzberg.
         </li>
         <li>
-          We don't have any pets.
+          We don't have children nor pets.
         </li>
         <li>
           Our budget is roughly €1200-€1600 per month.
@@ -479,23 +472,20 @@
       </ul>
     </div>
     <div class="de">
-      <h3>Summary of key information</h3>
+      <h3>Überblick</h3>
       <ul>
+        <li>Wir werden beide ab 1. April in Berlin umziehen. Gerne können wir auch eine Wohnung einige Wochen früher
+          übernehmen.</li>
+        <li>Bzgl. Wohnungsgröße sind wir flexibel, idealerweisse wünschen wir uns mindestens zwei Schlafzimmer, eine
+          geräumige
+          Einbauküche und einen Balkon oder Terrasse. Wir möchten möglichst zentral (am liebsten in
+          Schöneberg/Tempelhof) und in
+          verkehrsgünstiger Entfernung zu Kreuzberg wohnen.</li>
         <li>
-          We will be both arriving in Berlin on April 1st to live. We would also be flexible in moving in a few weeks
-          earlier.
+          Wir haben keine Kinder, keine Haustiere.
         </li>
         <li>
-          We are open-minded about where we live, but we'd ideally like at least two bedrooms, a spacious kitchen, and
-          a balcony or a terrace.
-          We would like to be reasonably central (preferably in Schöneberg/Tempelhof) and a commutable distance
-          from Kreuzberg.
-        </li>
-        <li>
-          We don't have any pets.
-        </li>
-        <li>
-          Our budget is roughly €1200-€1600 per month.
+          Unser Budget liegt bei ca. 1200-1600 € pro Monat.
         </li>
       </ul>
     </div>
@@ -503,12 +493,11 @@
 
   <div class="bgimg-4">
     <div class="caption">
-      <span class="border en">WANT US TO BE YOUR NEXT TENANTS?</span>
-      <span class="border de">WANT US TO BE YOUR NEXT TENANTS?</span><br>
-      <span class="border en"><a href="mailto:denisanazarko8@gmail.com" target="_blank">GET
-          IN TOUCH!</a></span>
-      <span class="border de"><a href="mailto:denisanazarko8@gmail.com" target="_blank">GET
-          IN TOUCH!</a></span>
+      <span class="border en">Want us to be your next tenants?</span>
+      <span class="border de">Können Sie sich uns als Ihre nächsten Mieter vorstellen?</span><br>
+      <span class="border en"><a href="mailto:denisanazarko8@gmail.com" target="_blank">Get in touch!</a></span>
+      <span class="border de"><a href="mailto:denisanazarko8@gmail.com" target="_blank">Bitte kontaktieren Sie
+          uns!</a></span>
     </div>
   </div>
 
