--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <style>
     body,
     html {
@@ -267,9 +274,10 @@
         autoplay: true,
         autoplaySpeed: 3000,
         arrows: false,
-        draggable: true,
+        draggable: false,
         pauseOnFocus: false,
         pauseOnHover: false,
+        swipe: false,
         speed: 300,
         slidesToShow: 3,
         slidesToScroll: 1,
@@ -299,7 +307,8 @@
         autoplay: true,
         autoplaySpeed: 3000,
         arrows: false,
-        draggable: true,
+        draggable: false,
+        swipe: false,
         pauseOnFocus: false,
         pauseOnHover: false,
         speed: 300,
