--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
       <ul>
         <li>Wir werden beide ab 1. April in Berlin umziehen. Gerne können wir auch eine Wohnung einige Wochen früher
           übernehmen.</li>
-        <li>Bzgl. Wohnungsgröße sind wir flexibel, idealerweisse wünschen wir uns mindestens zwei Schlafzimmer, eine
+        <li>Bzgl. Wohnungsgröße sind wir flexibel, idealerweise wünschen wir uns mindestens zwei Schlafzimmer, eine
           geräumige
           Einbauküche und einen Balkon oder Terrasse. Wir möchten möglichst zentral (am liebsten in
           Schöneberg/Tempelhof) und in
