wichtig to bedeutsam

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
     <div class="caption">
       <span class="border en">We contribute to Germany's social welfare system and digitalization</span>
-      <span class="border de">Unsere Leistung ist wichtig für das Sozialsystem und für die Digitalisierung</span>
+      <span class="border de">Unsere Leistung ist bedeutsam für das Sozialsystem und für die Digitalisierung</span>
     </div>
   </div>
 
